# tobes-ui

./: .gitignore  Makefile  README.md  a.py  calibration.py  hpcs320-csv-to-json.py  main.py  ocean-capture.py  protocol.py  pyproject.toml  spectrometer.py  viz-scaled.rb
examples/: cali-sample.json  early-sunset.json  halogen.json  lcd-screen.json  overcast-flame-s.json  overcast-hpcs320.csv  overcast-hpcs320.json  overcast-hpcs320.ohs  overcast-torchbearer-y2.json
helpers/: create_icons.py  find_font_with_symbol.py  rainbow_gen.py  strong_lines_gen.py  strong_lines_template.j2
tests/: __init__.py  test_attrdict.py  test_float_to_string.py  test_properties.py  test_sliding_max.py  test_spectrum_aggregator.py  test_strong_lines.py  test_strong_lines_container.py
tobes_ui/: common.py  cursors.py  loader.py  logger.py  main.py  plot.py  properties.py  protocol.py  rainbow.py  spectrometer.py  strong_lines.py  strong_lines_container.py  tools.py  types.py  wavelength_calibration.py
tobes_ui/calibration/: common.py  integration_control.py  peak_detection_control.py  reference_match_control.py  sampling_control.py  strong_lines_control.py  wavelength_editor.py  wavelength_save_dialog.py  x_axis_control.py  x_axis_zoom_control.py
tobes_ui/loaders/: __init__.py  hopoo.py  json.py
tobes_ui/spectrometers/: __init__.py  fake.py  oceanoptics.py  torchbearer.py
